2007-11-22  Neal H. Walfield  <neal@gnu.org>

	* storage.h (struct storage): New struct.
	(storage_alloc): Return a struct storage, not an addr.  Update all
	callers.
	* storage.c (struct storage_desc): Remove field shadow.  Add field
	cap.
	(shadow_setup): Save the cap.
	(storage_alloc): Return a struct storage, not an addr.
	(storage_free): Correctly free the shadow if not used.  Update
	STORAGE->CAP to reflect that the folio has been removed.
	* capalloc.c (struct cappage_desc): Add field cap.
	(capalloc): Stash CAP.  When allocating a cappage, allocate a
	shadow object.
	(capfree): Really free CAPPAGE if there is another page available.
	If freeing CAPPAGE, unlink DESC and update DESC->CAP to reflect
	that the page has been deallocated, deallocate the shadow, and
	deallocate CAPPAGE.

	* exceptions.c (exception_thread): Print IP when a fault cannot be
	resolved.

	* mmap.c (mmap): Cast addr to a uintptr_t to elide warning.

2007-11-20  Neal H. Walfield  <neal@gnu.org>

	* pager.h (pager_region_compare): Set A_END and B_END to the last
	byte in their respective region, not the first byte after the end.

2007-11-19  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (libhurd_mm_a_SOURCES): Add exceptions.h,
	exceptions.c, pager.h, pager.c, anonymous.h and anonymous.c.
	* headers.m4: Link $(BUILDDIR)/include/hurd/pager.h to pager.h.
	Link $(BUILDDIR)/include/hurd/anonymous.h to anonymous.h.
	* mm-init.c: Include "exceptions.h".
	(mm_init): Call exception_handler_init.
	* pager.h: Completely rewrite.
	* pager.c: Likewise.
	* anonymous.h: Likewise.
	* anonymous.c: Likewise.
	* exceptions.h: New file.
	* exceptions.c: Likewise.
	* mmap.c: Include <hurd/anonymous.h>.
	(mmap): Rewrite to use an anonymous pager.

2007-11-19  Neal H. Walfield  <neal@gnu.org>

	* as.c (__hurd_startup_data): Declare.
	(free_space_desc_slab_alloc): Use ADDR_TO_PTR and PTR_TO_ADDR
	correctly.
	(free_space_desc_slab_dealloc): Likewise.
	(allocate_object): Likewise.
	(storage_alloc): Likewise.