@@ -346,7 +346,7 @@ as_build_internal (activity_t activity,
 	  bool r = cap_copy_x (activity,
 			       &cappage->caps[pivot_idx], pivot_addr,
 			       *root, root_addr,
-			       CAP_COPY_COPY_GUARD, addr_trans);
+			       CAP_COPY_COPY_ADDR_TRANS_GUARD, addr_trans);
 	  assert (r);
 
 	  /* Finally, set the slot at ROOT to point to CAPPAGE.  */
@@ -362,7 +362,8 @@ as_build_internal (activity_t activity,
 	  assert (r);
 
 	  r = cap_copy_x (activity, root, root_addr, rt.cap, rt.storage,
-			  CAP_COPY_COPY_SUBPAGE | CAP_COPY_COPY_GUARD,
+			  CAP_COPY_COPY_ADDR_TRANS_SUBPAGE
+			  | CAP_COPY_COPY_ADDR_TRANS_GUARD,
 			  addr_trans);
 	  assert (r);
 	}
@@ -399,7 +400,7 @@ as_build_internal (activity_t activity,
 
       r = cap_copy_x (activity, root, addr_chop (a, gbits),
 		      *root, addr_chop (a, gbits),
-		      CAP_COPY_COPY_GUARD, addr_trans);
+		      CAP_COPY_COPY_ADDR_TRANS_GUARD, addr_trans);
       assert (r);
     }
 
